_includes/manuals/1.13/3.6_upgrade.md

### Upgrading to Foreman {{page.version}}

#### Preparation

When upgrading across more than one version it is recommended to upgrade to each
intermediate version and follow all upgrade instructions for the previous versions
before updating to {{page.version}}.

Check the list of [Supported Platforms](manuals/{{page.version}}/index.html#3.1.1SupportedPlatforms)
when planning to upgrade, as these change between releases. If your OS is no
longer supported by Foreman, migrate or upgrade the OS (if supported) using a
release of Foreman supported by both OS versions before upgrading Foreman.

#### Step 1 - Backup

It is recommended that you backup your database and modifications to Foreman
files(config/settings.yaml, unattended installations etc).  Most upgrades are
safe but it never hurts to have a backup just in case.

For more information about how to backup your instance head over to
[Backup](manuals/{{page.version}}/index.html#5.5.1Backup)

#### Step 2 - Perform the upgrade

Before proceeding, it is necessary to shutdown the Foreman instance (e.g.
`service httpd stop` or `service apache2 stop` usually).

Now it's time to perform the actual upgrade.  This process if different
depending on how you downloaded Foreman.  You only need to perform *one* of
the following options.

##### Step 2 (A) - Fedora or RHEL package (RPM) and installer setups

To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package for your operating system:

    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
    dnf upgrade https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm

Clean up the yum cache:

    yum clean all

First upgrade or install the SCL release package to add rh-ruby22 and
sclo-ror42 repositories:

    yum install foreman-release-scl

Next upgrade all Foreman packages:

    yum upgrade tfm\* ruby\* foreman\*

If the command above raises an error when determining the packages to update,
check below for possible resolutions:

* `Requires: sclo-ror42-runtime`: missing the sclo-ror42 software collection repository.
  Check that the CentOS SCLorg SIG repo with sclo-ror42 is enabled as per [RPM Pre-requisites](manuals/{{page.version}}/index.html#3.3.1RPMPackages).

In order to catch all configuration changes and manage them properly you should install and run
rpmconf from the EPEL repository along with vim-enhanced (for vimdiff):

    rpmconf -a --frontend=vimdiff

You can skip to Step 3.

##### Step 2 (B) - Debian or Ubuntu package (deb) and installer setups

Upgrading from the last release to {{page.version}} has been tested on both
Debian and Ubuntu. Updating the packages will upgrade the application and
automatically migrate the database.

First edit `/etc/apt/sources.list.d/foreman.list` and change the release
number from the previous release or "stable" to `{{ page.version }}`:

    deb http://deb.theforeman.org/ jessie {{ page.version }}
    deb http://deb.theforeman.org/ plugins {{ page.version }}

Next upgrade all Foreman packages:

    apt-get update
    apt-get --only-upgrade install ruby\* foreman\*

You can skip to Step 3.

##### Step 2 (C) - Downloaded release (tar.bz2)

- Uncompress the new program archive in a *new directory*.
- Copy your database settings-file `config/database.yml` into the new `config` directory.
- If your database is a simple file (e.g. SQLite), don't forget to make it available in the new directory.

VERY IMPORTANT: do NOT overwrite `config/settings.yml` with the old one.

##### Step 2 (D) - git checkouts only

*Please note* that there can be significant differences between stable and
development branches.  You MUST take care to select a branch and make sure you
get the correct one.

1. Go to the Foreman root directory and run the following command:

For staying on the stable branch:

- git checkout {{page.version}}-stable
- git pull

There may have been changes to the ruby gem or node module versions, to update
run the following commands:
    
    bundle update
    npm update

The following step is the one that could change the contents of your database.
Go to your new Foreman directory (or the git dir), then migrate and update the
contents of your database:

    foreman-rake db:migrate
    foreman-rake db:seed

You should compile i18n strings and precompile assets now:

    foreman-rake locale:pack
    foreman-rake assets:precompile RAILS_ENV=production
    foreman-rake webpack:compile RAILS_ENV=production

#### Step 3 - Post-upgrade steps

##### Step 3 (A) - Database migration and cleanup

The database should be migrated already, but you can make sure by executing the
migration script again, it should produce no errors or output:

    foreman-rake db:migrate
    foreman-rake db:seed

You should clear the cache and the existing sessions:

    foreman-rake tmp:cache:clear
    foreman-rake tmp:sessions:clear

##### Step 3 (B) - OpenStack and Rackspace compute resource users

The functionality for OpenStack and Rackspace compute resources has been
separated into their own packages in Foreman 1.12, so if you use either compute
resource then install either `foreman-openstack`:

    yum install foreman-openstack      # EL/Fedora
    apt-get install foreman-openstack  # Debian/Ubuntu

or `foreman-rackspace`:

    yum install foreman-rackspace      # EL/Fedora
    apt-get install foreman-rackspace  # Debian/Ubuntu

##### Step 3 (C) - Ubuntu 14.04 (Trusty) users, change PassengerRuby

Ubuntu 14.04 (Trusty) users must ensure that PassengerRuby is changed to point
to a symlink provided in the Foreman packages to ensure a smooth upgrade.  Edit
`/etc/apache2/sites-available/05-foreman*.conf` and ensure this is set inside
the `<VirtualHost` block:

    PassengerRuby /usr/bin/foreman-ruby

##### Optional Step 3 (C) - Run foreman-installer

If you used foreman-installer to set up your existing Foreman instance we
recommend running it again after upgrading. Note that the installer can
modify config files so this may overwrite your custom changes. You can run
the installer in noop mode so you can see what would be changed.

To see what would happen

    foreman-installer --noop --dont-save-answers --verbose

You may see ERRORS such as `/Stage[main]/Foreman_proxy::Register/Foreman_smartproxy[foreman-hostname.domain]:` `Could not evaluate: Connection refused - connect(2)` due to httpd / apache2 service being stopped.  These can be safely ignored.

To apply these changes, run the installer again without options

    foreman-installer

#### Step 4 - Restart

Restart the application server (e.g. mongrel, thin, passenger).

On RPM installations, run:

    service httpd restart

And on Debian/Ubuntu installations with Passenger, run:

    service apache2 restart

#### Optional Step 5 - Cleanup of RPMs and repositories

On EL6/7, consider removing the unmaintained softwarecollections.org
repositories, which are replaced by the CentOS SCLorg repos:

    yum erase rhscl-\*

And consider removing unused SCL packages:

    yum erase ruby193\* rh-ror41\*

#### Common issues

See
[Troubleshooting](http://projects.theforeman.org/projects/foreman/wiki/Troubleshooting)
